Change Jinja2 template.

--- a/roles/webserver/templates/iisstart.j2
+++ b/roles/webserver/templates/iisstart.j2
@@ -1,3 +1,4 @@
 <html>
-<h1> Hey there, Nicolas. Hello from the {{ ansible_fqdn }} server.</h1>
+<h1> Hey there, Nicolas. Hello from the {{ ansible_hostname }} server.</h1>
+<h3> Version: {{ app_version }}</h3>
 </html>
